--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "@angular/router": "^17.0.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-sql": "^2.2.0",
     "@tauri-apps/plugin-window-state": "^2.2.2",
+    "monaco-editor": "^0.44.0",
+    "ngx-monaco-editor-v2": "^18.1.0",
+    "primeicons": "^7.0.0",
     "primeng": "^17.18.15",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^11.1.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
